fixed cfg